tdf#98525 Commit font style change to dimension line object

Change-Id: I59e19e00fd0fdadaa7bffc4fbd1cb79d7e5a9763